--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
       background-color: #f44336;
       color: white;
     }
+    .event p a {
+      color: #4caf50;
+      text-decoration: none;
+    }
+    .event p a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -98,7 +105,7 @@
       <h3>March 2024</h3>
       <div class="event">
         <h4>Grok 1.5</h4>
-        <p>X Corporation announces Grok 1.5 (open source).</p>
+        <p>X Corporation announces Grok 1.5 (<a href="https://huggingface.co/xai-org/grok-1" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -127,17 +134,17 @@
       </div>
       <div class="event">
         <h4>Mixtral 8x22B</h4>
-        <p>Mistral releases Mixtral 8x22B (open source).</p>
+        <p>Mistral releases Mixtral 8x22B (<a href="https://huggingface.co/mistralai/Mixtral-8x7B-v0.1" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>LLaMA 3</h4>
-        <p>Meta releases LLaMA 3 (open source).</p>
+        <p>Meta releases LLaMA 3 (<a href="https://huggingface.co/meta-llama" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Phi-3-mini</h4>
-        <p>Microsoft releases Phi-3-mini (open source).</p>
+        <p>Microsoft releases Phi-3-mini (<a href="https://huggingface.co/microsoft/phi-2" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -152,7 +159,7 @@
       </div>
       <div class="event">
         <h4>OpenELM</h4>
-        <p>Apple releases OpenELM (open source).</p>
+        <p>Apple releases OpenELM (<a href="https://github.com/apple/ml-openelm" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
     </div>
@@ -181,7 +188,7 @@
       </div>
       <div class="event">
         <h4>Mistral-7B-Instruct-v0.3</h4>
-        <p>Mistral AI releases Mistral-7B-Instruct-v0.3 (open source).</p>
+        <p>Mistral AI releases Mistral-7B-Instruct-v0.3 (<a href="https://huggingface.co/mistralai/Mistral-7B-Instruct-v0.2" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -215,7 +222,7 @@
       </div>
       <div class="event">
         <h4>DeepSeekCoderV2</h4>
-        <p>DeepSeekAI publishes DeepSeekCoderV2 (open source).</p>
+        <p>DeepSeekAI publishes DeepSeekCoderV2 (<a href="https://huggingface.co/deepseek-ai/deepseek-coder-1.3b-base" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -230,12 +237,12 @@
       </div>
       <div class="event">
         <h4>Florence 2</h4>
-        <p>Microsoft releases Florence 2 (open source).</p>
+        <p>Microsoft releases Florence 2 (<a href="https://huggingface.co/microsoft/florence" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Gemma 2</h4>
-        <p>Google announces Gemma 2 (open source).</p>
+        <p>Google announces Gemma 2 (<a href="https://huggingface.co/google/gemma-7b" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
     </div>
@@ -249,7 +256,7 @@
       </div>
       <div class="event">
         <h4>Llama 3.1</h4>
-        <p>Meta releases Llama 3.1 (open source).</p>
+        <p>Meta releases Llama 3.1 (<a href="https://huggingface.co/meta-llama" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -284,7 +291,7 @@
       </div>
       <div class="event">
         <h4>Gemma 2 2B</h4>
-        <p>Google releases Gemma 2 2B (open source).</p>
+        <p>Google releases Gemma 2 2B (<a href="https://huggingface.co/google/gemma-2b" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
     </div>
@@ -362,7 +369,7 @@
       </div>
       <div class="event">
         <h4>Llama 3.2</h4>
-        <p>Meta releases Llama 3.2 (open source).</p>
+        <p>Meta releases Llama 3.2 (<a href="https://huggingface.co/meta-llama" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -372,7 +379,7 @@
       </div>
       <div class="event">
         <h4>Moshi</h4>
-        <p>Kyutai releases Moshi (open source).</p>
+        <p>Kyutai releases Moshi (<a href="https://huggingface.co/kyutai" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -411,12 +418,12 @@
       </div>
       <div class="event">
         <h4>Aria</h4>
-        <p>Rhymes AI releases Aria (open source).</p>
+        <p>Rhymes AI releases Aria (<a href="https://huggingface.co/RhymesAI" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Meta Spirit LM</h4>
-        <p>Meta releases Meta Spirit LM (open source).</p>
+        <p>Meta releases Meta Spirit LM (<a href="https://huggingface.co/meta-llama" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -426,7 +433,7 @@
       </div>
       <div class="event">
         <h4>Janus AI</h4>
-        <p>DeepSeekAI releases Janus AI (open source).</p>
+        <p>DeepSeekAI releases Janus AI (<a href="https://huggingface.co/deepseek-ai" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -436,7 +443,7 @@
       </div>
       <div class="event">
         <h4>Stable Diffusion 3.5</h4>
-        <p>Stable Diffusion 3.5 is released (open source).</p>
+        <p>Stable Diffusion 3.5 is released (<a href="https://huggingface.co/stabilityai" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -470,7 +477,7 @@
       </div>
       <div class="event">
         <h4>Qwen2.5 Coder 32B</h4>
-        <p>Alibaba open-sources Qwen2.5 Coder 32B.</p>
+        <p>Alibaba open-sources Qwen2.5 Coder 32B (<a href="https://huggingface.co/Qwen" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -564,7 +571,7 @@
       </div>
       <div class="event">
         <h4>Phi4</h4>
-        <p>Microsoft open-sources Phi4.</p>
+        <p>Microsoft open-sources Phi4 (<a href="https://huggingface.co/microsoft/phi-2" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -574,7 +581,7 @@
       </div>
       <div class="event">
         <h4>PaliGemma 2</h4>
-        <p>Google launches PaliGemma 2 (open source).</p>
+        <p>Google launches PaliGemma 2 (<a href="https://huggingface.co/google" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -589,7 +596,7 @@
       </div>
       <div class="event">
         <h4>DeepSeek V3</h4>
-        <p>DeepSeek open-sources DeepSeek V3.</p>
+        <p>DeepSeek open-sources DeepSeek V3 (<a href="https://huggingface.co/deepseek-ai" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
