--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <h3>February 2024</h3>
       <div class="event">
         <h4>Stable Diffusion 3</h4>
-        <p>Stability AI announces Stable Diffusion 3 (gradually released to waiting list).</p>
-        <span class="tag api-only">API Only</span>
+        <p>Stability AI announces Stable Diffusion 3 (later <a href="https://huggingface.co/collections/stabilityai/stable-diffusion-3-666992fb11f5d8d0ec8192e8" target="_blank">open sourced</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Gemini Pro</h4>
@@ -105,7 +105,7 @@
       <h3>March 2024</h3>
       <div class="event">
         <h4>Grok 1.5</h4>
-        <p>X Corporation announces Grok 1.5 (<a href="https://huggingface.co/xai-org/grok-1" target="_blank">open source</a>).</p>
+        <p>X Corporation announces Grok 1.5 ( & Grok-1 <a href="https://huggingface.co/xai-org/grok-1" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -124,8 +124,8 @@
       <h3>April 2024</h3>
       <div class="event">
         <h4>Stable Audio 2.0</h4>
-        <p>Stability AI releases Stable Audio 2.0.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Stability AI releases Stable Audio 2.0 (<a href="https://huggingface.co/stabilityai/stable-audio-open-1.0" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Grok-1.5V</h4>
@@ -134,17 +134,17 @@
       </div>
       <div class="event">
         <h4>Mixtral 8x22B</h4>
-        <p>Mistral releases Mixtral 8x22B (<a href="https://huggingface.co/mistralai/Mixtral-8x7B-v0.1" target="_blank">open source</a>).</p>
+        <p>Mistral releases Mixtral 8x22B (<a href="https://huggingface.co/mistralai/Mixtral-8x22B-Instruct-v0.1" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>LLaMA 3</h4>
-        <p>Meta releases LLaMA 3 (<a href="https://huggingface.co/meta-llama" target="_blank">open source</a>).</p>
+        <p>Meta releases LLaMA 3 (<a href="https://huggingface.co/collections/meta-llama/meta-llama-3-66214712577ca38149ebb2b6" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Phi-3-mini</h4>
-        <p>Microsoft releases Phi-3-mini (<a href="https://huggingface.co/microsoft/phi-2" target="_blank">open source</a>).</p>
+        <p>Microsoft releases Phi-3-mini (<a href="https://huggingface.co/collections/microsoft/phi-3-6626e15e9585a200d2d761e3" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -159,7 +159,7 @@
       </div>
       <div class="event">
         <h4>OpenELM</h4>
-        <p>Apple releases OpenELM (<a href="https://github.com/apple/ml-openelm" target="_blank">open source</a>).</p>
+        <p>Apple releases OpenELM (<a href="https://huggingface.co/collections/apple/openelm-instruct-models-6619ad295d7ae9f868b759ca" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
     </div>
@@ -183,12 +183,12 @@
       </div>
       <div class="event">
         <h4>Chameleon</h4>
-        <p>Meta introduces Chameleon, a multimodal model.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Meta introduces Chameleon, a multimodal model later <a href="https://huggingface.co/collections/facebook/chameleon-668da9663f80d483b4c61f58" target="_blank">open sourced</a>.</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Mistral-7B-Instruct-v0.3</h4>
-        <p>Mistral AI releases Mistral-7B-Instruct-v0.3 (<a href="https://huggingface.co/mistralai/Mistral-7B-Instruct-v0.2" target="_blank">open source</a>).</p>
+        <p>Mistral AI releases Mistral-7B-Instruct-v0.3 (<a href="https://huggingface.co/mistralai/Mistral-7B-Instruct-v0.3" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -203,8 +203,8 @@
       </div>
       <div class="event">
         <h4>Codestral</h4>
-        <p>Mistral AI releases Codestral for coding.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Mistral AI releases Codestral (<a href="https://huggingface.co/mistralai/Codestral-22B-v0.1" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
     </div>
     <!-- June 2024 -->
@@ -212,8 +212,8 @@
       <h3>June 2024</h3>
       <div class="event">
         <h4>Stable Diffusion 3 (Medium)</h4>
-        <p>Stability AI releases Stable Diffusion 3 in medium version.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Stability AI releases Stable Diffusion 3 in medium version (<a href="https://huggingface.co/collections/stabilityai/stable-diffusion-3-666992fb11f5d8d0ec8192e8" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Apple Intelligence</h4>
@@ -222,7 +222,7 @@
       </div>
       <div class="event">
         <h4>DeepSeekCoderV2</h4>
-        <p>DeepSeekAI publishes DeepSeekCoderV2 (<a href="https://huggingface.co/deepseek-ai/deepseek-coder-1.3b-base" target="_blank">open source</a>).</p>
+        <p>DeepSeekAI publishes DeepSeekCoderV2 (<a href="https://huggingface.co/collections/deepseek-ai/deepseekcoder-v2-666bf4b274a5f556827ceeca" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -237,12 +237,12 @@
       </div>
       <div class="event">
         <h4>Florence 2</h4>
-        <p>Microsoft releases Florence 2 (<a href="https://huggingface.co/microsoft/florence" target="_blank">open source</a>).</p>
+        <p>Microsoft releases Florence 2 (<a href="https://huggingface.co/collections/microsoft/florence-6669f44df0d87d9c3bfb76de" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Gemma 2</h4>
-        <p>Google announces Gemma 2 (<a href="https://huggingface.co/google/gemma-7b" target="_blank">open source</a>).</p>
+        <p>Google announces Gemma 2 (<a href="https://huggingface.co/collections/google/gemma-2-release-667d6600fd5220e7b967f315" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
     </div>
@@ -256,13 +256,13 @@
       </div>
       <div class="event">
         <h4>Llama 3.1</h4>
-        <p>Meta releases Llama 3.1 (<a href="https://huggingface.co/meta-llama" target="_blank">open source</a>).</p>
+        <p>Meta releases Llama 3.1 (<a href="https://huggingface.co/collections/meta-llama/llama-31-669fc079a0c406a149a5738f" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Codestral Mamba</h4>
-        <p>Mistral AI releases Codestral Mamba.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Mistral AI releases Codestral Mamba (<a href="https://huggingface.co/mistralai/Mamba-Codestral-7B-v0.1" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>AlphaProof & AlphaGeometry 2</h4>
@@ -300,8 +300,8 @@
       <h3>August 2024</h3>
       <div class="event">
         <h4>Flux</h4>
-        <p>Black Forest Labs releases Flux for image creation.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Black Forest Labs releases Flux (<a href="https://huggingface.co/black-forest-labs" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>GPT-4o 0806</h4>
@@ -320,8 +320,8 @@
       </div>
       <div class="event">
         <h4>Phi 3.5</h4>
-        <p>Microsoft introduces Phi 3.5.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Microsoft introduces Phi 3.5 (<a href="https://huggingface.co/collections/microsoft/phi-3-6626e15e9585a200d2d761e3" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Gemini 1.5 Flash8B</h4>
@@ -344,8 +344,8 @@
       <h3>September 2024</h3>
       <div class="event">
         <h4>Pixtral12B</h4>
-        <p>Mistral introduces Pixtral12B.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Mistral introduces Pixtral12B (<a href="https://huggingface.co/mistralai/Pixtral-12B-2409" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>o1 preview & o1 mini</h4>
@@ -354,8 +354,8 @@
       </div>
       <div class="event">
         <h4>Qwen 2.5</h4>
-        <p>Alibaba releases Qwen 2.5.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Alibaba releases Qwen 2.5 (<a href="https://huggingface.co/collections/Qwen/qwen25-66e81a666513e518adb90d9e" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>KLING 1.5</h4>
@@ -369,7 +369,7 @@
       </div>
       <div class="event">
         <h4>Llama 3.2</h4>
-        <p>Meta releases Llama 3.2 (<a href="https://huggingface.co/meta-llama" target="_blank">open source</a>).</p>
+        <p>Meta releases Llama 3.2 (<a href="https://huggingface.co/collections/meta-llama/llama-32-66f448ffc8c32f949b04c8cf" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -423,7 +423,7 @@
       </div>
       <div class="event">
         <h4>Meta Spirit LM</h4>
-        <p>Meta releases Meta Spirit LM (<a href="https://huggingface.co/meta-llama" target="_blank">open source</a>).</p>
+        <p>Meta releases Meta Spirit LM (<a href="https://github.com/facebookresearch/spiritlm" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -432,8 +432,8 @@
         <span class="tag api-only">API Only</span>
       </div>
       <div class="event">
-        <h4>Janus AI</h4>
-        <p>DeepSeekAI releases Janus AI (<a href="https://huggingface.co/deepseek-ai" target="_blank">open source</a>).</p>
+        <h4>Janus</h4>
+        <p>DeepSeekAI releases Janus (<a href="https://huggingface.co/deepseek-ai/Janus-1.3B" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -472,12 +472,12 @@
       <h3>November 2024</h3>
       <div class="event">
         <h4>QwQ 32B Preview</h4>
-        <p>Alibaba releases QwQ 32B Preview.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Alibaba releases QwQ 32B Preview (<a href="https://huggingface.co/collections/Qwen/qwq-674762b79b75eac01735070a" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Qwen2.5 Coder 32B</h4>
-        <p>Alibaba open-sources Qwen2.5 Coder 32B (<a href="https://huggingface.co/Qwen" target="_blank">open source</a>).</p>
+        <p>Alibaba open-sources Qwen2.5 Coder 32B (<a href="https://huggingface.co/collections/Qwen/qwen25-coder-66eaa22e6f99801bf65b0c2f" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -492,13 +492,13 @@
       </div>
       <div class="event">
         <h4>Pixtral Large</h4>
-        <p>Mistral AI launches Pixtral Large.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Mistral AI launches Pixtral Large (<a href="https://huggingface.co/mistralai/Pixtral-Large-Instruct-2411" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Mistral Large 2411</h4>
-        <p>Mistral AI updates Mistral Large 2411.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Mistral AI updates Mistral Large 2411 (<a href="https://huggingface.co/mistralai/Mistral-Large-Instruct-2411" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>gemini-exp-1114 & gemini-exp-1121</h4>
@@ -571,17 +571,17 @@
       </div>
       <div class="event">
         <h4>Phi4</h4>
-        <p>Microsoft open-sources Phi4 (<a href="https://huggingface.co/microsoft/phi-2" target="_blank">open source</a>).</p>
+        <p>Microsoft open-sources Phi4 (<a href="https://huggingface.co/microsoft/phi-4" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>Llama 3.3 70B</h4>
-        <p>Meta releases Llama 3.3 70B.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Meta releases Llama 3.3 70B (<a href="https://huggingface.co/collections/meta-llama/llama-33-67531d5c405ec5d08a852000" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>PaliGemma 2</h4>
-        <p>Google launches PaliGemma 2 (<a href="https://huggingface.co/google" target="_blank">open source</a>).</p>
+        <p>Google launches PaliGemma 2 (<a href="https://huggingface.co/collections/google/paligemma-2-release-67500e1e1dbfdd4dee27ba48" target="_blank">open source</a>).</p>
         <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
@@ -591,8 +591,8 @@
       </div>
       <div class="event">
         <h4>Apollo</h4>
-        <p>Meta introduces Apollo.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Meta introduces Apollo (<a href="https://huggingface.co/GoodiesHere" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>DeepSeek V3</h4>
@@ -601,8 +601,8 @@
       </div>
       <div class="event">
         <h4>QVQ-72B-Preview</h4>
-        <p>Alibaba unveils QVQ-72B-Preview.</p>
-        <span class="tag api-only">API Only</span>
+        <p>Alibaba unveils QVQ-72B-Preview (<a href="https://huggingface.co/collections/Qwen/qvq-676448c820912236342b9888" target="_blank">open source</a>).</p>
+        <span class="tag open-source">Open Source</span>
       </div>
       <div class="event">
         <h4>O3</h4>
