--- a/index.html
+++ b/index.html
@@ -558,6 +558,11 @@
         <span class="tag api-only">API Only</span>
       </div>
       <div class="event">
+        <h4>SmolLM 2</h4>
+        <p>Hugging Face open sources SmolLM 2 (<a href="https://huggingface.co/collections/HuggingFaceTB/smollm2-6723884218bcda64b34d7db9" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>
+      <div class="event">
         <h4>Pixtral Large</h4>
         <p>Mistral AI launches Pixtral Large (<a href="https://huggingface.co/mistralai/Pixtral-Large-Instruct-2411" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
@@ -581,6 +586,11 @@
         <h4>Visual PDF Analysis</h4>
         <p>Anthropic introduces Visual PDF Analysis in Claude.</p>
         <span class="tag api-only">API Only</span>
+      </div>
+      <div class="event">
+        <h4>SmolVLM</h4>
+        <p>Hugging Face open sources SmolVLM (<a href="https://huggingface.co/collections/HuggingFaceTB/smolvlm-6740bd584b2dcbf51ecb1f39" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
       </div>
     </div>
     <!-- December 2024 -->
