--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
         <span class="tag api-only">API Only</span>
       </div>
       <div class="event">
+        <h4>CodeGemma</h4>
+        <p>Google announces CodeGemma for code generation (<a href="https://huggingface.co/collections/google/codegemma-release-66152ac7b683e2667abdee11" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>
+      <div class="event">
         <h4>Sora</h4>
         <p>OpenAI announces Sora for video generation (not released to public).</p>
         <span class="tag api-only">API Only</span>
@@ -410,6 +415,11 @@
     <div class="month">
       <h3>September 2024</h3>
       <div class="event">
+        <h4>OLMoE</h4>
+        <p>Allen AI open sources OLMoE (<a href="https://huggingface.co/collections/allenai/olmoe-66cf678c047657a30c8cd3da" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>
+      <div class="event">
         <h4>Pixtral12B</h4>
         <p>Mistral introduces Pixtral12B (<a href="https://huggingface.co/mistralai/Pixtral-12B-2409" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
@@ -553,6 +563,11 @@
         <span class="tag api-only">API Only</span>
       </div>
       <div class="event">
+        <h4>Tulu 3</h4>
+        <p>Allen AI open sources Tulu 3 (<a href="https://huggingface.co/collections/allenai/tulu-3-models-673b8e0dc3512e30e7dc54f5" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>
+      <div class="event">
         <h4>Suno v4</h4>
         <p>Suno upgrades to v4.</p>
         <span class="tag api-only">API Only</span>
@@ -576,6 +591,11 @@
         <h4>gemini-exp-1114 & gemini-exp-1121</h4>
         <p>Google introduces gemini-exp-1114 and gemini-exp-1121.</p>
         <span class="tag api-only">API Only</span>
+      </div>
+      <div class="event">
+        <h4>OLMo 2</h4>
+        <p>Allen AI open sources OLMo 2 (<a href="https://huggingface.co/collections/allenai/olmo-2-674117b93ab84e98afc72edc" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
       </div>
       <div class="event">
         <h4>Claude 3.5 Haiku</h4>
