--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       color: #333;
       margin: 0;
       padding: 0;
-      overflow-x: auto;
+      overflow-x: scroll;
+      scrollbar-width: thin;
+      -ms-overflow-style: -ms-autohiding-scrollbar;
     }
     .timeline {
       display: flex;
@@ -146,6 +148,23 @@
     }
     .github-link a:hover {
       text-decoration: underline;
+    }
+    /* Add these styles to ensure consistent scrollbar appearance across browsers */
+    body::-webkit-scrollbar {
+      height: 8px; /* Height of horizontal scrollbar */
+    }
+
+    body::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background: #888;
+      border-radius: 4px;
+    }
+
+    body::-webkit-scrollbar-thumb:hover {
+      background: #555;
     }
   </style>
 </head>
