sync w HF space

--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
     .toggle-button {
       padding: 8px 16px;
       border: none;
+      color: black;
       border-radius: 5px;
       cursor: pointer;
       font-size: 14px;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s, color 0.3s;
     }
     .toggle-button.active {
       color: white;
@@ -119,6 +120,7 @@
     }
     .toggle-button.open-source.active {
       background-color: #4caf50;
+      color: white;
     }
     .toggle-button.api-only {
       background-color: #ffebee;
@@ -127,6 +129,7 @@
     }
     .toggle-button.api-only.active {
       background-color: #f44336;
+      color: white;
     }
     .toggle-button.show-all {
       background-color: #e3f2fd;
@@ -135,6 +138,7 @@
     }
     .toggle-button.show-all.active {
       background-color: #2196f3;
+      color: white;
     }
     .github-link {
       text-align: center;
