--- a/index.html
+++ b/index.html
@@ -449,6 +449,11 @@
         <p>Luma unveils Dream Machine 1.5.</p>
         <span class="tag api-only">API Only</span>
       </div>
+      <div class="event">
+        <h4>Command R+</h4>
+        <p>Cohere releases Command R+ (<a href="https://huggingface.co/CohereForAI/c4ai-command-r-plus-08-2024" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>            
     </div>
     <!-- September 2024 -->
     <div class="month">
@@ -522,6 +527,11 @@
         <p>Meta unveils Movie Gen.</p>
         <span class="tag api-only">API Only</span>
       </div>
+      <div class="event">
+        <h4>Aya Expanse</h4>
+        <p>Cohere releases Aya Expanse (<a href="https://huggingface.co/collections/CohereForAI/c4ai-aya-expanse-671a83d6b2c07c692beab3c3" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>      
       <div class="event">
         <h4>Pika Effects</h4>
         <p>Pika introduces Video Model 1.5 with Pika Effects.</p>
@@ -665,6 +675,11 @@
         <p>OpenAI releases SORA for video generation.</p>
         <span class="tag api-only">API Only</span>
       </div>
+      <div class="event">
+        <h4>Command R7B</h4>
+        <p>Cohere releases Command R7B (<a href="https://huggingface.co/CohereForAI/c4ai-command-r7b-12-2024" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>      
       <div class="event">
         <h4>O1 & O1 Pro</h4>
         <p>OpenAI releases O1 and O1 Pro.</p>
