Add Falcon models

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
         <p>Apple releases OpenELM (<a href="https://huggingface.co/collections/apple/openelm-instruct-models-6619ad295d7ae9f868b759ca" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
       </div>
+
     </div>
     <!-- May 2024 -->
     <div class="month">
@@ -313,11 +314,12 @@
         <span class="tag api-only">API Only</span>
       </div>
       <div class="event">
-        <h4>Codestral</h4>
-        <p>Mistral AI releases Codestral (<a href="https://huggingface.co/mistralai/Codestral-22B-v0.1" target="_blank">open weights</a>).</p>
+        <h4>Falcon 2</h4>
+        <p>TII releases Falcon2-11B and Falcon2-VLM (<a href="https://huggingface.co/blog/falcon2-11b" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
       </div>
     </div>
+
     <!-- June 2024 -->
     <div class="month">
       <h3>June 2024</h3>
@@ -453,7 +455,12 @@
         <h4>Command R+</h4>
         <p>Cohere releases Command R+ (<a href="https://huggingface.co/CohereForAI/c4ai-command-r-plus-08-2024" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
-      </div>            
+      </div>
+      <div class="event">
+        <h4>Falcon Mamba</h4>
+        <p>TII introduces state space model Falcon Mamba(<a href="https://huggingface.co/blog/falconmamba" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>
     </div>
     <!-- September 2024 -->
     <div class="month">
@@ -769,6 +776,11 @@
         <h4>Kling 1.6</h4>
         <p>Kling 1.6 is released.</p>
         <span class="tag api-only">API Only</span>
+      </div>
+      <div class="event">
+        <h4>Falcon 3</h4>
+        <p>TII releases Falcon 3 family of models (<a href="https://huggingface.co/blog/falcon3" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
       </div>
     </div>
   </div>
