--- a/index.html
+++ b/index.html
@@ -273,7 +273,6 @@
         <p>Apple releases OpenELM (<a href="https://huggingface.co/collections/apple/openelm-instruct-models-6619ad295d7ae9f868b759ca" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
       </div>
-
     </div>
     <!-- May 2024 -->
     <div class="month">
@@ -314,12 +313,16 @@
         <span class="tag api-only">API Only</span>
       </div>
       <div class="event">
+        <h4>Codestral</h4>
+        <p>Mistral AI releases Codestral (<a href="https://huggingface.co/mistralai/Codestral-22B-v0.1" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>
+      <div class="event">
         <h4>Falcon 2</h4>
         <p>TII releases Falcon2-11B and Falcon2-VLM (<a href="https://huggingface.co/blog/falcon2-11b" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
       </div>
     </div>
-
     <!-- June 2024 -->
     <div class="month">
       <h3>June 2024</h3>
