--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
       </div>
       <div class="event">
         <h4>Falcon Mamba</h4>
-        <p>TII introduces state space model Falcon Mamba(<a href="https://huggingface.co/blog/falconmamba" target="_blank">open weights</a>).</p>
+        <p>TII introduces state space model Falcon Mamba(<a href="https://huggingface.co/collections/tiiuae/falconmamba-7b-66b9a580324dd1598b0f6d4a" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
       </div>
     </div>
