--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       </div>
       <div class="event">
         <h4>Falcon 2</h4>
-        <p>TII releases Falcon2-11B and Falcon2-VLM (<a href="https://huggingface.co/blog/falcon2-11b" target="_blank">open weights</a>).</p>
+        <p>TII releases Falcon2-11B and Falcon2-VLM (<a href="https://huggingface.co/collections/tiiuae/falcon2-6641c2f0b98ddf3fe49b4012" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
       </div>
     </div>
