--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ÅÅ<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -758,6 +758,11 @@
       <div class="event">
         <h4>DeepSeek V3</h4>
         <p>DeepSeek open-sources DeepSeek V3 (<a href="https://huggingface.co/deepseek-ai" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>
+      <div class="event">
+        <h4>ModernBERT</h4>
+        <p>AnswerAI and LightOn open-source ModernBERT (<a href="https://huggingface.co/collections/answerdotai/modernbert-67627ad707a4acbf33c41deb" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
       </div>
       <div class="event">
