add chinese models.

--- a/index.html
+++ b/index.html
@@ -347,6 +347,11 @@
         <span class="tag api-only">API Only</span>
       </div>
       <div class="event">
+        <h4>Yi 1.5</h4>
+        <p>01 AI releases Yi 1.5 (<a href="https://huggingface.co/collections/01-ai/yi-15-2024-05-663f3ecab5f815a3eaca7ca8" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>      
+      <div class="event">
         <h4>Claude Sonnet 3.5</h4>
         <p>Anthropic releases Claude Sonnet 3.5.</p>
         <span class="tag api-only">API Only</span>
@@ -435,6 +440,11 @@
         <span class="tag api-only">API Only</span>
       </div>
       <div class="event">
+        <h4>Hermes 3</h4>
+        <p>Nous Research releases Hermes 3 (<a href="https://huggingface.co/collections/NousResearch/hermes-3-66bd6c01399b14b08fe335ea" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>      
+      <div class="event">
         <h4>Phi 3.5</h4>
         <p>Microsoft introduces Phi 3.5 (<a href="https://huggingface.co/collections/microsoft/phi-3-6626e15e9585a200d2d761e3" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
@@ -484,6 +494,11 @@
         <span class="tag api-only">API Only</span>
       </div>
       <div class="event">
+        <h4>Granite Code</h4>
+        <p>IBM introduces Granite Code (<a href="https://huggingface.co/collections/ibm-granite/granite-code-models-6624c5cec322e4c148c8b330" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
+      </div>      
+      <div class="event">
         <h4>Qwen 2.5</h4>
         <p>Alibaba releases Qwen 2.5 (<a href="https://huggingface.co/collections/Qwen/qwen25-66e81a666513e518adb90d9e" target="_blank">open weights</a>).</p>
         <span class="tag open-source">Open Weights</span>
@@ -492,6 +507,11 @@
         <h4>KLING 1.5</h4>
         <p>KLING 1.5 is released.</p>
         <span class="tag api-only">API Only</span>
+      </div>
+      <div class="event"></div>
+        <h4>Yi Coder</h4>
+        <p>01 AI releases Yi-Coder (<a href="https://huggingface.co/collections/01-ai/yi-coder-66bdb00f5bdd611f9a008f30" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
       </div>
       <div class="event">
         <h4>GPT4o Advanced Voice Mode</h4>
@@ -719,6 +739,11 @@
         <h4>Veo 2</h4>
         <p>Google releases Veo 2 for video generation.</p>
         <span class="tag api-only">API Only</span>
+      </div>
+      <div class="event">
+        <h4>Granite 3.1</h4>
+        <p>IBM open-sources Granite 3.1 (<a href="https://huggingface.co/collections/ibm-granite/granite-31-language-models-6751dbbf2f3389bec5c6f02d" target="_blank">open weights</a>).</p>
+        <span class="tag open-source">Open Weights</span>
       </div>
       <div class="event">
         <h4>Imagen 3 Update</h4>
